# sidecar

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cpp/: CMakeLists.txt
cpp/include/: processor.h
cpp/src/: main.cpp  processor.cpp
python/calc/: __init__.py  __main__.py  operations.py  parser.py
python/tests/: test_operations.py
rust/: Cargo.toml
rust/src/: lib.rs  metrics.rs  transform.rs
scripts/: install.sh
src/: app.rs  cli.rs  config.rs  diff.rs  external.rs  git.rs  main.rs  notes.rs  render.rs  skill.rs  tui.rs
src/ui/: diff_view.rs  highlight.rs  mod.rs  search.rs  sidebar.rs  status_bar.rs
