[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"
description = "A side-by-side diff/review TUI for agentic coding workflows"

[[bin]]
name = "sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
ansi-to-tui = "7"
tempfile = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.3"
